Refactor LinuxDiskInfoProvider to enhance mount point retrieval logic